--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - pip install mysql-python
 
 script:
-  - wsgi/myproyect/manage.py
+  - wsgi/myproject/manage.py
 
 deploy:
   provider: openshift
