--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
 
 script:
   - python wsgi/myproject/manage.py
-  - python manage.py syncdb
+  - python wsgi/myproject/manage.py syncdb
 
 deploy:
   provider: openshift
